Pabot Parallel Testing
Pabot Parallel Testing
pabot --processes 2 --outputdir Results Tests

--- a/DataDrivenTest - Upgraded/Results/report.html
+++ b/DataDrivenTest - Upgraded/Results/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,65115],[[4,5,6,0,[],[1,21,65084],[],[[7,0,1,0,[],[1,199,27977],[]],[8,0,1,0,[9],[1,28178,14727],[]],[10,0,1,0,[11],[1,42907,22193],[]]],[],[3,3,3,3]]],[],[],[3,3,3,3]];
+window.output["suite"] = [1,2,3,4,[],[0,0,33906],[[5,6,7,0,[],[0,360,33271],[],[[8,0,1,0,[],[0,537,33090,9],[]]],[],[1,0,1,0]],[10,11,12,0,[],[0,351,33277],[],[[13,0,1,0,[14],[0,532,9191,15],[]],[16,0,1,0,[17],[0,9724,23902,18],[]]],[],[2,0,2,0]]],[],[],[3,0,3,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Development\\RobotScripts\\DataDrivenTest - Upgraded\\tests","*../tests","*Cars","*C:\\Development\\RobotScripts\\DataDrivenTest - Upgraded\\tests\\Cars.robot","*../tests/Cars.robot","*Invalid Login Scenarios Should Display Correct Error Message","*Valid users should be able to login","*LoginTest","*User should be able to search for a car","*SearchTest"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Development\\RobotScripts\\DataDrivenTest - Upgraded\\Tests","*../Tests","*<p><a href=\"https://pabot.org/?ref=log\">Pabot\x3c/a> result from 2 executions.\x3c/p>","*UserInvalid","*C:\\Development\\RobotScripts\\DataDrivenTest - Upgraded\\Tests\\UserInvalid.robot","*../Tests/UserInvalid.robot","*Invalid Login Scenarios Should Display Correct Error Message","*Several failures occurred:\n\n1) WebDriverException: Message: chrome not reachable\n  (Session info: chrome=78.0.3904.70)\n\n\n2) Execution terminated by signal","*UserValid","*C:\\Development\\RobotScripts\\DataDrivenTest - Upgraded\\Tests\\UserValid.robot","*../Tests/UserValid.robot","*Valid users should be able to login","*LoginTest","*Setup failed:\nSessionNotCreatedException: Message: session not created\nfrom chrome not reachable\n  (Session info: chrome=78.0.3904.70)\n","*User should be able to search for a car","*SearchTest","*Execution terminated by signal"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:05","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:01:05","fail":0,"label":"All Tests","pass":3}],[{"elapsed":"00:00:15","fail":0,"label":"LoginTest","pass":1},{"elapsed":"00:00:22","fail":0,"label":"SearchTest","pass":1}],[{"elapsed":"00:01:05","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3},{"elapsed":"00:01:05","fail":0,"id":"s1-s1","label":"Tests.Cars","name":"Cars","pass":3}]];
+window.output["stats"] = [[{"elapsed":"00:01:06","fail":3,"label":"Critical Tests","pass":0},{"elapsed":"00:01:06","fail":3,"label":"All Tests","pass":0}],[{"elapsed":"00:00:09","fail":1,"label":"LoginTest","pass":0},{"elapsed":"00:00:24","fail":1,"label":"SearchTest","pass":0}],[{"elapsed":"00:00:34","fail":3,"id":"s1","label":"Tests","name":"Tests","pass":0},{"elapsed":"00:00:33","fail":1,"id":"s1-s1","label":"Tests.UserInvalid","name":"UserInvalid","pass":0},{"elapsed":"00:00:33","fail":2,"id":"s1-s2","label":"Tests.UserValid","name":"UserValid","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1573066536751;
+window.output["baseMillis"] = 1573068046129;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 65152;
+window.output["generated"] = 33920;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
